PJPParser.py
# Generated from PJP.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PJPParser ( Parser ):

    grammarFileName = "PJP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'['", "']'", "','", "'read'", 
                     "'write'", "'{'", "'}'", "'if'", "'('", "')'", "'else'", 
                     "'while'", "'int'", "'float'", "'bool'", "'string'", 
                     "'-'", "'!'", "'*'", "'/'", "'%'", "'+'", "'.'", "'<'", 
                     "'>'", "'=='", "'!='", "'&&'", "'||'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "FLOAT", "INT", "BOOL", "STRING", "VAR", "COMMENT", 
                      "WS" ]

    RULE_prog = 0
    RULE_statement = 1
    RULE_varType = 2
    RULE_expression = 3

    ruleNames =  [ "prog", "statement", "varType", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    FLOAT=32
    INT=33
    BOOL=34
    STRING=35
    VAR=36
    COMMENT=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PJPParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.StatementContext)
            else:
                return self.getTypedRuleContext(PJPParser.StatementContext,i)


        def getRuleIndex(self):
            return PJPParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PJPParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 133145028322) != 0):
                self.state = 8
                self.statement()
                self.state = 13
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 14
            self.match(PJPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PJPParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExpressionStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(PJPParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStat" ):
                listener.enterExpressionStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStat" ):
                listener.exitExpressionStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStat" ):
                return visitor.visitExpressionStat(self)
            else:
                return visitor.visitChildren(self)


    class ArrayDeclStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varType(self):
            return self.getTypedRuleContext(PJPParser.VarTypeContext,0)

        def VAR(self):
            return self.getToken(PJPParser.VAR, 0)
        def INT(self):
            return self.getToken(PJPParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDeclStat" ):
                listener.enterArrayDeclStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDeclStat" ):
                listener.exitArrayDeclStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayDeclStat" ):
                return visitor.visitArrayDeclStat(self)
            else:
                return visitor.visitChildren(self)


    class IfStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(PJPParser.ExpressionContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.StatementContext)
            else:
                return self.getTypedRuleContext(PJPParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)


    class DeclarationStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varType(self):
            return self.getTypedRuleContext(PJPParser.VarTypeContext,0)

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(PJPParser.VAR)
            else:
                return self.getToken(PJPParser.VAR, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationStat" ):
                listener.enterDeclarationStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationStat" ):
                listener.exitDeclarationStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationStat" ):
                return visitor.visitDeclarationStat(self)
            else:
                return visitor.visitChildren(self)


    class EmptyCommandStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyCommandStat" ):
                listener.enterEmptyCommandStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyCommandStat" ):
                listener.exitEmptyCommandStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyCommandStat" ):
                return visitor.visitEmptyCommandStat(self)
            else:
                return visitor.visitChildren(self)


    class WhileStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(PJPParser.ExpressionContext,0)

        def statement(self):
            return self.getTypedRuleContext(PJPParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStat" ):
                listener.enterWhileStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStat" ):
                listener.exitWhileStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStat" ):
                return visitor.visitWhileStat(self)
            else:
                return visitor.visitChildren(self)


    class WriteStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PJPParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteStat" ):
                listener.enterWriteStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteStat" ):
                listener.exitWriteStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteStat" ):
                return visitor.visitWriteStat(self)
            else:
                return visitor.visitChildren(self)


    class ReadStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(PJPParser.VAR)
            else:
                return self.getToken(PJPParser.VAR, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStat" ):
                listener.enterReadStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStat" ):
                listener.exitReadStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStat" ):
                return visitor.visitReadStat(self)
            else:
                return visitor.visitChildren(self)


    class StatementStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.StatementContext)
            else:
                return self.getTypedRuleContext(PJPParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementStat" ):
                listener.enterStatementStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementStat" ):
                listener.exitStatementStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementStat" ):
                return visitor.visitStatementStat(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = PJPParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = PJPParser.EmptyCommandStatContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 16
                self.match(PJPParser.T__0)
                pass

            elif la_ == 2:
                localctx = PJPParser.ArrayDeclStatContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 17
                self.varType()
                self.state = 18
                self.match(PJPParser.VAR)
                self.state = 19
                self.match(PJPParser.T__1)
                self.state = 20
                self.match(PJPParser.INT)
                self.state = 21
                self.match(PJPParser.T__2)
                self.state = 22
                self.match(PJPParser.T__0)
                pass

            elif la_ == 3:
                localctx = PJPParser.DeclarationStatContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 24
                self.varType()
                self.state = 25
                self.match(PJPParser.VAR)
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==4:
                    self.state = 26
                    self.match(PJPParser.T__3)
                    self.state = 27
                    self.match(PJPParser.VAR)
                    self.state = 32
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 33
                self.match(PJPParser.T__0)
                pass

            elif la_ == 4:
                localctx = PJPParser.ExpressionStatContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 35
                self.expression(0)
                self.state = 36
                self.match(PJPParser.T__0)
                pass

            elif la_ == 5:
                localctx = PJPParser.ReadStatContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 38
                self.match(PJPParser.T__4)
                self.state = 39
                self.match(PJPParser.VAR)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==4:
                    self.state = 40
                    self.match(PJPParser.T__3)
                    self.state = 41
                    self.match(PJPParser.VAR)
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 47
                self.match(PJPParser.T__0)
                pass

            elif la_ == 6:
                localctx = PJPParser.WriteStatContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 48
                self.match(PJPParser.T__5)
                self.state = 49
                self.expression(0)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==4:
                    self.state = 50
                    self.match(PJPParser.T__3)
                    self.state = 51
                    self.expression(0)
                    self.state = 56
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 57
                self.match(PJPParser.T__0)
                pass

            elif la_ == 7:
                localctx = PJPParser.StatementStatContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 59
                self.match(PJPParser.T__6)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 133145028322) != 0):
                    self.state = 60
                    self.statement()
                    self.state = 65
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 66
                self.match(PJPParser.T__7)
                pass

            elif la_ == 8:
                localctx = PJPParser.IfStatContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 67
                self.match(PJPParser.T__8)
                self.state = 68
                self.match(PJPParser.T__9)
                self.state = 69
                self.expression(0)
                self.state = 70
                self.match(PJPParser.T__10)
                self.state = 71
                self.statement()
                self.state = 74
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 72
                    self.match(PJPParser.T__11)
                    self.state = 73
                    self.statement()


                pass

            elif la_ == 9:
                localctx = PJPParser.WhileStatContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 76
                self.match(PJPParser.T__12)
                self.state = 77
                self.match(PJPParser.T__9)
                self.state = 78
                self.expression(0)
                self.state = 79
                self.match(PJPParser.T__10)
                self.state = 80
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PJPParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarType" ):
                return visitor.visitVarType(self)
            else:
                return visitor.visitChildren(self)




    def varType(self):

        localctx = PJPParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 245760) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PJPParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AndExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PJPParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)


    class BoolExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(PJPParser.BOOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolExpr" ):
                listener.enterBoolExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolExpr" ):
                listener.exitBoolExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolExpr" ):
                return visitor.visitBoolExpr(self)
            else:
                return visitor.visitChildren(self)


    class StringExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(PJPParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringExpr" ):
                listener.enterStringExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringExpr" ):
                listener.exitStringExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringExpr" ):
                return visitor.visitStringExpr(self)
            else:
                return visitor.visitChildren(self)


    class MultDivModExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PJPParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultDivModExpr" ):
                listener.enterMultDivModExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultDivModExpr" ):
                listener.exitMultDivModExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultDivModExpr" ):
                return visitor.visitMultDivModExpr(self)
            else:
                return visitor.visitChildren(self)


    class FloatExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(PJPParser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatExpr" ):
                listener.enterFloatExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatExpr" ):
                listener.exitFloatExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatExpr" ):
                return visitor.visitFloatExpr(self)
            else:
                return visitor.visitChildren(self)


    class PlusMinusConcatExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PJPParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlusMinusConcatExpr" ):
                listener.enterPlusMinusConcatExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlusMinusConcatExpr" ):
                listener.exitPlusMinusConcatExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlusMinusConcatExpr" ):
                return visitor.visitPlusMinusConcatExpr(self)
            else:
                return visitor.visitChildren(self)


    class LogicNotExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(PJPParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicNotExpr" ):
                listener.enterLogicNotExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicNotExpr" ):
                listener.exitLogicNotExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicNotExpr" ):
                return visitor.visitLogicNotExpr(self)
            else:
                return visitor.visitChildren(self)


    class ArrayAccessExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(PJPParser.VAR, 0)
        def expression(self):
            return self.getTypedRuleContext(PJPParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayAccessExpr" ):
                listener.enterArrayAccessExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayAccessExpr" ):
                listener.exitArrayAccessExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayAccessExpr" ):
                return visitor.visitArrayAccessExpr(self)
            else:
                return visitor.visitChildren(self)


    class OrExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PJPParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)


    class AssignExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(PJPParser.VAR, 0)
        def expression(self):
            return self.getTypedRuleContext(PJPParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignExpr" ):
                listener.enterAssignExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignExpr" ):
                listener.exitAssignExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignExpr" ):
                return visitor.visitAssignExpr(self)
            else:
                return visitor.visitChildren(self)


    class EqualNotEqualExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PJPParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualNotEqualExpr" ):
                listener.enterEqualNotEqualExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqualNotEqualExpr" ):
                listener.exitEqualNotEqualExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualNotEqualExpr" ):
                return visitor.visitEqualNotEqualExpr(self)
            else:
                return visitor.visitChildren(self)


    class VarExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(PJPParser.VAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarExpr" ):
                listener.enterVarExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarExpr" ):
                listener.exitVarExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarExpr" ):
                return visitor.visitVarExpr(self)
            else:
                return visitor.visitChildren(self)


    class ArrayAssignExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(PJPParser.VAR, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PJPParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayAssignExpr" ):
                listener.enterArrayAssignExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayAssignExpr" ):
                listener.exitArrayAssignExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayAssignExpr" ):
                return visitor.visitArrayAssignExpr(self)
            else:
                return visitor.visitChildren(self)


    class IntExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(PJPParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntExpr" ):
                listener.enterIntExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntExpr" ):
                listener.exitIntExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntExpr" ):
                return visitor.visitIntExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParenExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(PJPParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenExpr" ):
                return visitor.visitParenExpr(self)
            else:
                return visitor.visitChildren(self)


    class HigherLowerExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PJPParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHigherLowerExpr" ):
                listener.enterHigherLowerExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHigherLowerExpr" ):
                listener.exitHigherLowerExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHigherLowerExpr" ):
                return visitor.visitHigherLowerExpr(self)
            else:
                return visitor.visitChildren(self)


    class UnaryMinusExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(PJPParser.ExpressionContext,0)

